# bios

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  WHATSAPP_BRIDGE_SETUP.md  docker-compose.yml
ai-bot/: Dockerfile  README.md  bot.py  config.py  dev.sh  llm_providers.py  pyproject.toml  requirements.txt  simple_bot.py
document-uploader/: Dockerfile  README.md  requirements.txt
document-uploader/app/: main.py
document-uploader/static/: style.css
document-uploader/templates/: room_selection.html  upload.html
scripts/: setup-whatsapp-bridge.sh  setup.sh
synapse/: Dockerfile  README.md  ai-bot-registration.yaml  homeserver.yaml  init.sh  log.config  whatsapp-bridge-registration.yaml
web-client/: Dockerfile  README.md  craco.config.js  nginx.conf  package-lock.json  package.json
web-client/src/: App.js  index.css  index.js
web-client/src/components/: ChatPage.js  LoadingSpinner.js  LoginPage.js
whatsapp-bridge/: Dockerfile  README.md  config.yaml
